reformatting APK installation & launching between setup_app_source and setup.sh + using __init.py__ to import utils + removing debug prints + exposing sample users in vuln_0 + creating secrets.json in jitsi-meet directory + removing docker compose and removing secrets.json in cleanup.sh